config parser test

--- a/config_test.cfg
+++ b/config_test.cfg
@@ -1,5 +1,5 @@
-#appname|screen|position|arguments
-C:\Program Files\Mozilla Firefox\firefox.exe|https://google.com
-C:\Program Files\Mozilla Firefox\firefox.exe|https://www.blender.org/
-C:\Program Files\PureRef\PureRef.exe|D:\AssetsLibrary\Ref\low-poly-graveyard.pur
-C:\Program Files\Blender Foundation\Blender 3.4\blender.exe|D:\tmp\test.blend
+#appname|x,y,width,height|arguments|delay till app becomes responsive(sec)
+C:\Program Files\Mozilla Firefox\firefox.exe|0,0,3440,1240|https://google.com|0.5
+C:\Program Files\Mozilla Firefox\firefox.exe|-1920,0,1500,1030|-new-window https://www.blender.org/|0.5
+C:\Program Files\Blender Foundation\Blender 3.4\blender.exe|0,0,1500,1400|D:\tmp\test.blend|5
+C:\Program Files\PureRef\PureRef.exe|-1920,0,1919,1030|D:\AssetsLibrary\Ref\low-poly-graveyard.pur|3
