Base workflow done (without error handling)

--- a/config_test.cfg
+++ b/config_test.cfg
@@ -1,5 +1,10 @@
-#appname|x,y,width,height|arguments|delay till app becomes responsive(sec)
-C:\Program Files\Mozilla Firefox\firefox.exe|0,0,3440,1240|https://google.com|0.5
-C:\Program Files\Mozilla Firefox\firefox.exe|-1920,0,1500,1030|-new-window https://www.blender.org/|0.5
-C:\Program Files\Blender Foundation\Blender 3.4\blender.exe|0,0,1500,1400|D:\tmp\test.blend|5
-C:\Program Files\PureRef\PureRef.exe|-1920,0,1919,1030|D:\AssetsLibrary\Ref\low-poly-graveyard.pur|3
+#File format: appname|x,y,width,height|delay till app becomes responsive(sec)|arg1|arg2|argn
+#Example of line with all filled in, and 1 parameter
+C:\Program Files\Mozilla Firefox\firefox.exe|0,0,3440,1380|0.5|https://google.com
+#Example of line with all filled in, and no params (note the trailing |)
+C:\Program Files\Mozilla Firefox\firefox.exe|0,0,3440,1380|0.5|
+#Example of a line with multiple parameters
+C:\Program Files\Mozilla Firefox\firefox.exe|-1920,0,1500,1030|0.5|-new-window|https://www.blender.org/
+#Sometimes apps take a bit to startup, so bigger dealay might be needed
+C:\Program Files\Blender Foundation\Blender 3.4\blender.exe|0,0,1500,1400|5|D:\tmp\test.blend
+C:\Program Files\PureRef\PureRef.exe|-1920,0,1919,1030|3|D:\AssetsLibrary\Ref\low-poly-graveyard.pur
