--- a/config_test.cfg
+++ b/config_test.cfg
@@ -1,10 +1,12 @@
-#File format: appname|x,y,width,height|delay till app becomes responsive(sec)|arg1|arg2|argn
+#File format: appname|x,y,width,height|delay till app becomes responsive(sec)|new cmd shell?|arg1|arg2|argn
+# new cmd shell needs to be true for example if you want to run .bat files that should run in separate cmd window
 #Example of line with all filled in, and 1 parameter
-C:\Program Files\Mozilla Firefox\firefox.exe|0,0,3440,1380|0.5|https://google.com
+C:\Program Files\Mozilla Firefox\firefox.exe|0,0,3440,1380|0.5|False|https://google.com
+C:\Windows\explorer.exe|100,100,900,700|1|False|C:\Users
 #Example of line with all filled in, and no params (note the trailing |)
-C:\Program Files\Mozilla Firefox\firefox.exe|0,0,3440,1380|0.5|
+C:\Program Files\Mozilla Firefox\firefox.exe|0,0,3440,1380|0.5|False|
 #Example of a line with multiple parameters
-C:\Program Files\Mozilla Firefox\firefox.exe|-1920,0,1500,1030|0.5|-new-window|https://www.blender.org/
+C:\Program Files\Mozilla Firefox\firefox.exe|-1920,0,1500,1030|0.5|False|-new-window|https://www.blender.org/
 #Sometimes apps take a bit to startup, so bigger dealay might be needed
-C:\Program Files\Blender Foundation\Blender 3.4\blender.exe|0,0,1500,1400|5|D:\tmp\test.blend
-C:\Program Files\PureRef\PureRef.exe|-1920,0,1919,1030|3|D:\AssetsLibrary\Ref\low-poly-graveyard.pur
+C:\Program Files\Blender Foundation\Blender 3.4\blender.exe|0,0,1500,1400|5|False|D:\tmp\test.blend
+C:\Program Files\PureRef\PureRef.exe|-1920,0,1919,1030|3|False|D:\AssetsLibrary\Ref\low-poly-graveyard.pur
