mroe testing and small bugfix (delay always, even when not moving windows)

--- a/config_test.cfg
+++ b/config_test.cfg
@@ -1,12 +1,15 @@
 #File format: appname|x,y,width,height|delay till app becomes responsive(sec)|new cmd shell?|arg1|arg2|argn
 # new cmd shell needs to be true for example if you want to run .bat files that should run in separate cmd window
+# if x,y,width,height are all set to 0, than window will not be moved
 #Example of line with all filled in, and 1 parameter
-C:\Program Files\Mozilla Firefox\firefox.exe|0,0,3440,1380|0.5|False|https://google.com
 C:\Windows\explorer.exe|100,100,900,700|1|False|C:\Users
-#Example of line with all filled in, and no params (note the trailing |)
-C:\Program Files\Mozilla Firefox\firefox.exe|0,0,3440,1380|0.5|False|
+#Example of line with all filled in, and 1 parameter, without moving the window. If you have firefox already launched this should open a new tab
+C:\Program Files\Mozilla Firefox\firefox.exe|0,0,0,0|1|False|https://google.com
+C:\Program Files\Mozilla Firefox\firefox.exe|0,0,0,0|2|False|https://bing.com
+#Example of line with all filled in, and no params 
+C:\Windows\explorer.exe|500,300,900,700|1|
 #Example of a line with multiple parameters
-C:\Program Files\Mozilla Firefox\firefox.exe|-1920,0,1500,1030|0.5|False|-new-window|https://www.blender.org/
+C:\Program Files\Mozilla Firefox\firefox.exe|-1920,0,1500,1030|2|False|-new-window|https://www.blender.org/
 #Sometimes apps take a bit to startup, so bigger dealay might be needed
-C:\Program Files\Blender Foundation\Blender 3.4\blender.exe|0,0,1500,1400|5|False|D:\tmp\test.blend
+C:\Program Files\Blender Foundation\Blender 3.4\blender.exe|0,0,2500,1380|5|False|D:\tmp\test.blend
 C:\Program Files\PureRef\PureRef.exe|-1920,0,1919,1030|3|False|D:\AssetsLibrary\Ref\low-poly-graveyard.pur
